# atomspace-agents

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
opencog/: CMakeLists.txt  README.md
opencog/cogserver/: CMakeLists.txt
opencog/cogserver/modules/: CMakeLists.txt  Proxy.h  WriteThruProxy.cc  WriteThruProxy.h  WriteThruShell.h  WriteThruShellModule.cc  WriteThruShellModule.h
opencog/cogserver/shell/: CMakeLists.txt  README.md  WriteThruShell.cc
